# macro-policy-thesis-map

./: LICENSE  README.md  build_backend.py  pyproject.toml
demo/: adoption_notes.json  adoption_notes.md  api_reference.html  api_reference.json  api_reference.md  artifact_index.json  artifact_index.md  assumption_registry.json  assumption_registry.md  benchmark_suite.json  benchmark_suite.md  boundary_attestation.json  boundary_attestation.md  case_gallery.json  case_gallery.md  citation_map.json  citation_map.md  cli_help.json  cli_help.md  cold_start_walkthrough.json  cold_start_walkthrough.md  command_matrix.json  command_matrix.md  compatibility_report.json  compatibility_report.md  data_dictionary_diff.json  data_dictionary_diff.md  docs_export.json  docs_export.md  evaluator_scorecard.json  evaluator_scorecard.md  evidence_bundle.json  evidence_bundle.md  example_pack.html  example_pack.json  example_pack.md  exposure_map.json  exposure_map.md  fixture_doctor.json  fixture_doctor.md  (+65 more)
demo/bundle_export/: manifest.json  manifest.md
examples/: macro_events.csv  portfolio_exposures.csv  prior_macro_events.csv
skills/agent/macro-policy-thesis-map/: SKILL.md
src/macro_policy_thesis_map/: __init__.py  cli.py  core.py  io.py  render.py
src/macro_policy_thesis_map/examples/: public_macro_cases.csv  thesis_sensitivities.csv
tests/: test_build_backend.py  test_cli.py  test_safety.py
